--- a/Cek-paket.html
+++ b/Cek-paket.html
@@ -28,17 +28,41 @@
 </head>
 <body>
     <div class="bg-[#F7F7F8]">
-         <!-- navbar -->
-        <div class="navbar bg-white py-[11px] flex items-center justify-around">
-            <div class="left-content text-[#2D71B4] font-[600] flex justify-content-center items-center space-x-[34px]">
-                <img src="./assets/nav-logo.jpeg" alt="logo-kuy" class="w-[162px]">
-                <a href="./Landing-page.html">Beranda</a>
-                <a href="./Cek-paket.html">Cek Paket</a>
-                <a href="./Cakupan-wilayah.html">Cakupan Wilayah</a>
+    <!-- navbar -->    
+    <nav class="bg-white border-gray-200">
+        <div class="max-w-screen-xl flex flex-wrap items-center justify-evenly mx-auto p-4">
+            <div class="hidden w-full md:block md:w-auto" id="navbar-default">
+                <ul class="items-center  flex flex-col p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:flex-row md:space-x-8 md:mt-0 md:border-0 md:bg-white ">
+                    <li class="mr-[20px]">
+                        <a href="./Landing-page.html">
+                            <img src="./assets/nav-logo.jpeg" alt="" class="w-[162px]">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="./Landing-page.html" class="block py-2 pl-3 mr-[10px] text-[#2D71B4] font-[600] rounded md:bg-transparent md:p-0 " aria-current="page">Beranda</a>
+                    </li>
+                    <li>
+                        <a href="./Cek-paket.html" class="block py-2 pl-3 mr-[10px] text-[#2D71B4] font-[600] rounded  md:hover:bg-transparent md:border-0  md:p-0  ">Cek Paket</a>
+                    </li>
+                    <li>
+                        <a href="./Cakupan-wilayah.html" class="block py-2 pl-3 pr-4 text-[#2D71B4] font-[600] rounded md:hover:bg-transparent md:border-0  md:p-0  ">Cakupan Wilayah</a>
+                    </li>
+                    <li>
+                        <a href="./Login.html" class="block py-2 pl-3 mr-[10px] text-[#2D71B4] font-[600] rounded  md:hover:bg-transparent md:border-0  md:p-0 lg:hidden xl:hidden md:hidden 2xl:hidden">Login</a>
+                    </li>
+                </ul>
             </div>
-
-            <div class="right-content ml-2 flex space-x-[34px]">
-                <div class="bg-[#2D71B4] text-white text-[16px] font-[600] rounded-md py-[6px] px-[16px] flex flex-row items-center">
+            <a href="./Landing-page.html">
+                <img src="./assets/nav-logo.jpeg" alt="" class="w-[142px] lg:hidden md:hidden xl:hidden 2xl:hidden">
+            </a>
+            <button data-collapse-toggle="navbar-default" type="button" class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="navbar-default" aria-expanded="false">
+                <span class="sr-only">Open main menu</span>
+                <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 17 14">
+                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 1h15M1 7h15M1 13h15"/>
+                </svg>
+            </button>
+            <div class="flex ml-[40px] hidden lg:flex md:flex xl:flex 2xl:flex">
+                <div class="bg-[#2D71B4] text-white text-[16px] font-[600] rounded-md py-[6px] px-[16px] flex flex-row items-center mr-4">
                     <img src="./assets/i-download.png" alt="download-app-kuy" class="w-[15.702px] h-[15.702px]">
                     <a href="#" class="ml-2">
                         Download Apps
@@ -46,10 +70,11 @@
                 </div>
 
                 <a href="./Login.html" class="rounded-md text-[#2D71B4] border border-[#2D71B4] items-center py-[6px] px-[16px]">
-                Login
+                    Login
                 </a>
             </div>
         </div>
+    </nav>
 
         <!-- search bar -->
         <div class="card bg-white mt-[38px] xl:w-[1120px] 2xl:w-[1120px] lg:w-[1120px] flex flex-col justify-center ml-[60px] xl:ml-[65px] 2xl:ml-[65px] lg:ml-[65px] p-[20px] rounded-md w-[343px]">
