--- a/Landing-page.html
+++ b/Landing-page.html
@@ -7,54 +7,79 @@
   <link rel="stylesheet" href="Landing-page.css">
 </head>
 <body>
-<div class="bg-[#F7F7F8] w-full">
-    <!-- navbar -->
-    <div class="navbar bg-white py-[11px] flex items-center justify-around">
-        <div class="left-content text-[#2D71B4] font-[600] flex justify-content-center items-center space-x-[34px]">
-            <a href="./Landing-page.html"><img src="./assets/nav-logo.jpeg" alt="logo-kuy" class="w-[162px]"></a>
-            <a href="./Landing-page.html">Beranda</a>
-            <a href="./Cek-paket.html">Cek Paket</a>
-            <a href="./Cakupan-wilayah.html">Cakupan Wilayah</a>
-        </div>
+<div class="bg-[#F7F7F8]">
+    <!-- navbar -->    
+    <nav class="bg-white border-gray-200">
+        <div class="max-w-screen-xl flex flex-wrap items-center justify-evenly mx-auto p-4">
+            <div class="hidden w-full md:block md:w-auto" id="navbar-default">
+                <ul class="items-center  flex flex-col p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:flex-row md:space-x-8 md:mt-0 md:border-0 md:bg-white ">
+                    <li class="mr-[20px]">
+                        <a href="./Landing-page.html">
+                            <img src="./assets/nav-logo.jpeg" alt="" class="w-[162px]">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="./Landing-page.html" class="block py-2 pl-3 mr-[10px] text-[#2D71B4] font-[600] rounded md:bg-transparent md:p-0 " aria-current="page">Beranda</a>
+                    </li>
+                    <li>
+                        <a href="./Cek-paket.html" class="block py-2 pl-3 mr-[10px] text-[#2D71B4] font-[600] rounded  md:hover:bg-transparent md:border-0  md:p-0  ">Cek Paket</a>
+                    </li>
+                    <li>
+                        <a href="./Cakupan-wilayah.html" class="block py-2 pl-3 pr-4 text-[#2D71B4] font-[600] rounded md:hover:bg-transparent md:border-0  md:p-0  ">Cakupan Wilayah</a>
+                    </li>
+                    <li>
+                        <a href="./Login.html" class="block py-2 pl-3 mr-[10px] text-[#2D71B4] font-[600] rounded  md:hover:bg-transparent md:border-0  md:p-0 lg:hidden xl:hidden md:hidden 2xl:hidden">Login</a>
+                    </li>
+                </ul>
+            </div>
+            <a href="./Landing-page.html">
+                <img src="./assets/nav-logo.jpeg" alt="" class="w-[142px] lg:hidden md:hidden xl:hidden 2xl:hidden">
+            </a>
+            <button data-collapse-toggle="navbar-default" type="button" class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="navbar-default" aria-expanded="false">
+                <span class="sr-only">Open main menu</span>
+                <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 17 14">
+                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 1h15M1 7h15M1 13h15"/>
+                </svg>
+            </button>
+            <div class="flex ml-[40px] hidden lg:flex md:flex xl:flex 2xl:flex">
+                <div class="bg-[#2D71B4] text-white text-[16px] font-[600] rounded-md py-[6px] px-[16px] flex flex-row items-center mr-4">
+                    <img src="./assets/i-download.png" alt="download-app-kuy" class="w-[15.702px] h-[15.702px]">
+                    <a href="#" class="ml-2">
+                        Download Apps
+                    </a>
+                </div>
 
-        <div class="right-content ml-2 flex space-x-[34px]">
-            <div class="bg-[#2D71B4] text-white text-[16px] font-[600] rounded-md py-[6px] px-[16px] flex flex-row items-center">
-                <img src="./assets/i-download.png" alt="download-app-kuy" class="w-[15.702px] h-[15.702px]">
-                <a href="#" class="ml-2">
-                    Download Apps
+                <a href="./Login.html" class="rounded-md text-[#2D71B4] border border-[#2D71B4] items-center py-[6px] px-[16px]">
+                    Login
                 </a>
             </div>
-
-            <a href="./Login.html" class="rounded-md text-[#2D71B4] border border-[#2D71B4] items-center py-[6px] px-[16px]">
-                Login
-            </a>
         </div>
-    </div>
+    </nav>
 
     <!-- hero -->
-    <div class="hero flex flex-row xl:flex-col 2xl:flex-col :flex-col justify-center items-center">
-        <img src="./assets/hero.jpeg" alt="hero-image-kuy" class="relative" class="w-full">
-        <!-- lacak paket -->
-        <div class="flex lg:absolute md:absolute xl:absolute 2xl:absolute md:top-[550px] xl:top-[550px] 2xl:top-[550px] lg:top-[550px] lacak">
-            <div class="bg-white rounded-md w-full lg:w-[373px] md:w-[373px] mb-[15px] h-[341px] mr-[20px]">
+    <div class=" hero flex flex-col justify-center items-center">
+        <img src="./assets/hero.jpeg" alt="hero-image-kuy" class="relative bg-cover" class="w-full">
+        <div class="flex flex-col lg:flex-row xl:flex-row 2xl:flex-row lg:absolute md:absolute xl:absolute 2xl:absolute md:top-[550px] xl:top-[550px] 2xl:top-[550px] lg:top-[550px] lacak">
+            <!-- lacak paket -->
+            <div class="bg-white rounded-md w-[350px] lg:w-[373px] md:w-[373px] mb-[15px] h-[300px] md:h-[341px] lg:h-[341px] xl:h-[341px] 2xl:h-[341px] ml-[20px] md:ml-0 lg:ml-0 xl:ml-0 2xl:ml-0 mr-[20px]">
                 <div class="p-[20px]">
-                    <span class="text-[#2D71B4] font-[600] text-[24px]">Lacak Paket Kuy</span>
+                    <span class="text-[#2D71B4] font-[600] text-[16px] lg:text-[24px] md:text-[24px] xl:text-[24px] 2xl:text-[24px]">Lacak Paket Kuy</span>
                     <div class="flex flex-col ">
-                        <label for="kodeResi" class="font-[600] my-[10px]">Kode Resi :</label>
-                        <textarea type="text" class="border border-[#606060] rounded-md" placeholder="Masukan Kode Resi, contoh: xxxxxxx , xxxxxxx , xxxxxxx" rows="4" cols="50"></textarea>
-                        <span class="text-[#5F5F5F] font-[500] text-[12px] mb-[25px] mt-2">*Kamu dapat memasukkan kode resi hinga 20 kode</span>
+                        <label for="kodeResi" class="font-[600] my-[10px] text-[14px]">Kode Resi :</label>
+                        <textarea type="text" class="border border-[#606060] rounded-md placeholder:text-[12px] lg:placeholder:text-[16px] md:placeholder:text-[16px] xl:placeholder:text-[16px] 2xl:placeholder:text-[16px]" placeholder="Masukan Kode Resi, contoh: xxxxxxx , xxxxxxx , xxxxxxx" rows="4" cols="50"></textarea>
+                        <span class="text-[#5F5F5F] font-[500] text-[10px] lg:text-[12px] md:text-[12px] xl:text-[12px] 2xl:text-[12px] mb-[25px] mt-2">*Kamu dapat memasukkan kode resi hinga 20 kode</span>
     
-                        <button class="bg-[#2D71B4] text-white font-[600] text-[18px] py-[12px] mt-[24px] rounded-md">Lacak Paket</button>
+                        <button class="bg-[#2D71B4] text-white font-[600] text-[14px] lg:text-[16px] md:text-[16px] xl:text-[16px] 2xl:text-[16px] py-[12px] lg:mt-[24px] xl:mt-[24px] md:mt-[24px] 2xl:mt-[24px] rounded-md">Lacak Paket</button>
                     </div>
                 </div>
             </div>
             
             <!-- cek ongkir -->
-            <div class="bg-white rounded-md w-full xl:max-w-[960px] 2xl:max-w-[960px] lg:max-w-[860px] md:max-w-[860px] h-[341px]">
+            <div class=" bg-white rounded-md w-full xl:max-w-[960px] 2xl:max-w-[960px] lg:max-w-[860px] md:max-w-[860px] h-[341px]">
                 <div class="bg-white rounded-md">
                     <div class="flex flex-col p-[20px] justify-around">
                         <span class="text-[#2D71B4] font-[600] text-[24px] mb-[44px]">Cek Ongkir</span>
-                        <div class="flex space-x-[18px]">
+                        <div class="flex flex-col lg:flex-row xl:flex-row 2xl:flex-row space-x-[18px]">
                             <input 
                                 type="text" 
                                 name="berat" 
