--- a/1 pengirim ke banyak penerima/konfirmasi-pesanan.html
+++ b/1 pengirim ke banyak penerima/konfirmasi-pesanan.html
@@ -75,7 +75,7 @@
     </nav>
     
     <div class="flex flex-col justify-center items-center mt-[50px]">
-        <p class="text-[#2D71B4] text-[28px] md:text-[40px] lg:text-[40px] xl:text-[40px] 2xl:text-[40px] font-[600] mb-[10px]">1 Pengirim ke Banyak Penerima</p>   
+        <p class="text-[#2D71B4] text-[28px] md:text-[40px] lg:text-[40px] xl:text-[40px] 2xl:text-[40px] font-[600] mb-[10px] text-center">1 Pengirim ke Banyak Penerima</p>   
         <hr class="lg:w-[852px] md:w-[752px] w-full border border-[#2D71B4] mb-[10px]">
         <div class="flex flex-col md:flex-row lg:flex-row xl:flex-row 2xl:flex-row">
             <a href="./data-pengirim.html">
