--- a/Cakupan-wilayah.html
+++ b/Cakupan-wilayah.html
@@ -57,7 +57,7 @@
         </div>
     </nav>
 
-    <div class="mx-6 md:mx-0 lg:mx-0 bg-white rounded-md flex flex-col md:flex-row lg:flex-row justify-evenly mt-[50px] mb-[100px] card w-[90%] lg:w-[1100px] md:w-[1000px] py-[20px] lg:ml-[70px] sm:flex-wrap">
+    <div class="p-6 bg-white rounded-md flex flex-col md:flex-col lg:flex-row justify-evenly mt-[50px] mb-[100px] card w-[90%] lg:w-[1100px] md:w-[720px] py-[20px] mx-auto sm:flex-wrap">
         <div class="flex flex-col sm:flex-wrap justify-center items-center md:items-start lg:items-start">
             <p class="text-[#2D71B4] text-[30px] font-[600] mb-[20px]">Cakupan Wilayah</p>
             <input type="text" name="search" id="search" placeholder="Cari alamat disini" class="border-[#E0E0E0] border w-[265px] rounded-md p-[10px]">
@@ -86,7 +86,7 @@
         </div>
     </div>
 
-    <div class="flex flex-col w-[400px] lg:w-[1100px] md:w-[1100px] xl:w-[1100px] 2xl:w-[1100px] pb-[200px] lg:ml-[70px] p-4 lg:p-0 md:p-0 pl-[40px] md:pl-0 xl:pl-0">
+    <div class="flex flex-col w-[400px] lg:w-[1100px] md:w-[720px] xl:w-[1100px] 2xl:w-[1100px] pb-[200px] p-6 mx-auto">
         <div class="">
             <p class="text-[#2D71B4] text-[30px] lg:text-[40px] md:text-[40px] font-[600]">Jangkauan Tiketux KUY</p>
             <p class="text-[#5F5F5F] text-[16px] font-[400] w-[320px] lg:w-full md:w-full text-justify">Saat ini pengiriman Tiketux Kuy sudah menjangkau total 51 kecamatan se Bandung Raya meliputi kecamatan di Kabupaten Bandung - Kabupaten Bandung Barat - Kota Bandung - Kota Cimahi. Cek daftar jangkauan pengiriman Tiketux Kuy di bawah ini sebelum kirim paket:</p>
@@ -102,7 +102,7 @@
             </div>
 
             <div class="tabel w-[100%]">
-                <table class="border-collapse border border-[#C2C2C2] p-2 p-2 w-[320px] lg:w-[804px] md:w-[804px]">
+                <table class="border-collapse border border-[#C2C2C2] p-2 p-2 w-[320px] lg:w-[804px] md:w-[704px]">
                     <thead class="w-[402px]">
                         <tr>
                             <th class="border border-[#C2C2C2] p-2 p-2">Kabupaten/Kota</th>
