--- a/banyak pengirim ke satu penerima/data-pengirim.html
+++ b/banyak pengirim ke satu penerima/data-pengirim.html
@@ -77,7 +77,7 @@
     
     <div class="flex flex-col justify-center items-center mt-[50px]">
         <p class="text-[#2D71B4] text-[28px] md:text-[40px] lg:text-[40px] xl:text-[40px] 2xl:text-[40px] text-center font-[600] mb-[10px]">Banyak Pengirim ke 1 Penerima</p>   
-        <hr class="lg:w-[852px] md:w-[752px] w-full border border-[#2D71B4] mb-[10px]">
+        <hr class="lg:w-[752px] md:w-[752px] w-full border border-[#2D71B4] mb-[10px]">
         <div class="flex flex-col md:flex-row lg:flex-row xl:flex-row 2xl:flex-row">
             <div class="flex bg-[#2D71B4] rounded-3xl text-white p-[6px] mr-[20px] justify-between items-center mt-2">
                 <p class="mr-[9px] bg-white text-[#2D71B4] py-[5px] px-[14px] rounded-full">1</p>
@@ -113,7 +113,7 @@
                 </div>
             </div>
 
-            <div class="flex flex-wrap justify-center items-center">
+            <div class="flex flex-wrap justify-center items-center ml-1">
                 <div class="flex flex-col w-[343px]">
                     <label for="teleponPengirim">No Telepon Pengirim</label>
                     <input type="text" name="teleponPengirim" id="teleponPengirim" placeholder="08xxxxx" class="border border-[#E7E7E7] rounded-md px-[10px] py-[5px] mt-2">
@@ -124,7 +124,7 @@
                 </div>
             </div>
 
-            <div class="flex mt-[20px] flex-wrap justify-center">
+            <div class="flex mt-[20px] flex-wrap justify-center ml-1">
                 <div class="flex flex-col w-[343px]">
                     <div class="flex justify-between">
                         <label for="alamatPenerima">Alamat</label>
@@ -140,12 +140,12 @@
                     <input type="text" name="alamatPenerima" id="alamatPenerima" class="h-[66px] border border-[#E7E7E7] rounded-md mt-2 px-[10px] py-[5px] " placeholder="Nama Kota, Jalan">
                 </div>
                 <div class="flex flex-col w-[343px] lg:ml-[20px] md:ml-[15px]">
-                    <label for="patokan" class="mt-[20px]">Patokan</label>
+                    <label for="patokan" class="">Patokan</label>
                     <input type="text" name="patokan" id="patokan" placeholder="Opsional" class="border border-[#E7E7E7] rounded-md px-[10px] py-[5px] mt-2">
                 </div>
             </div>
 
-            <div class="flex flex-wrap justify-center">
+            <div class="flex flex-wrap justify-center ml-1">
                 <div class="border border-[#E7E7E7] rounded-md mt-[20px] h-[97px] flex justify-center w-[343px]">
                     <a href="" class="flex justify-center items-center">
                         <img src="../assets/pengiriman/location.png" alt="icon-location-kuy">
@@ -173,7 +173,7 @@
                 </div>
             </div>
 
-            <div class="flex flex-wrap justify-center">
+            <div class="flex flex-wrap justify-center ml-1">
                 <div class="w-[343px] h-[98px] border border-[#2D71B4] rounded-md px-[10px] py-[6px] lg:my-[20px] md:my-[15px] flex relative">
                     <div class="flex flex-col justify-between">
                         <div class="flex-col flex">
