--- a/1 pengirim ke banyak penerima/konfirmasi-pesanan.html
+++ b/1 pengirim ke banyak penerima/konfirmasi-pesanan.html
@@ -32,7 +32,7 @@
             <div class="hidden w-full md:block md:w-auto" id="navbar-default">
                 <ul class="items-center  flex flex-col p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:flex-row md:space-x-8 md:mt-0 md:border-0 md:bg-white ">
                     <li class="mr-[20px]">
-                        <a href="./Landing-page.html">
+                        <a href="../Landing-page.html">
                             <img src="../assets/nav-logo.jpeg" alt="" class="w-[162px]">
                         </a>
                     </li>
