--- a/banyak pengirim ke satu penerima/data-pengirim.html
+++ b/banyak pengirim ke satu penerima/data-pengirim.html
@@ -32,7 +32,7 @@
             <div class="hidden w-full md:block md:w-auto" id="navbar-default">
                 <ul class="items-center  flex flex-col p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:flex-row md:space-x-8 md:mt-0 md:border-0 md:bg-white ">
                     <li class="mr-[20px]">
-                        <a href="./Landing-page.html">
+                        <a href="../Landing-page.html">
                             <img src="../assets/nav-logo.jpeg" alt="" class="w-[162px]">
                         </a>
                     </li>
@@ -74,7 +74,6 @@
         </div>
     </nav>
 
-    
     <div class="flex flex-col justify-center items-center mt-[50px]">
         <p class="text-[#2D71B4] text-[28px] md:text-[40px] lg:text-[40px] xl:text-[40px] 2xl:text-[40px] text-center font-[600] mb-[10px]">Banyak Pengirim ke 1 Penerima</p>   
         <hr class="lg:w-[752px] md:w-[752px] w-full border border-[#2D71B4] mb-[10px]">
